[package]
name = "txt2png5x5"
version = "0.1.0"
authors = ["Iris Shi <0.0@owo.li>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

console_error_panic_hook = { version = "0.1.7", optional = true }
png = "0.18.0"
serde_json = "1.0.143"

